# clam_ffi

./: .gitmodules  README.md  clam_ffi.code-workspace
bind_gen/: Cargo.toml
bind_gen/bindings/c/: example_complex.h
bind_gen/bindings/csharp/: Interop.cs
bind_gen/src/: lib.rs
bind_gen/tests/: bindings.rs
clam_ffi/: Cargo.toml
clam_ffi/src/: lib.rs
clam_ffi/src/core/: entry_point.rs  handle.rs  mod.rs  test.rs
clam_ffi/src/ffi_impl/: clam_helpers.rs  cluster_data.rs  cluster_data_wrapper.rs  ffi_struct.rs  handle.rs  handle2.rs  handle3.rs  lib_impl.rs  mod.rs  node.rs  physics.rs  physics_node.rs  reingold_impl.rs  spring.rs  string_ffi.rs
clam_ffi/src/graph/: entry.rs  force_directed_graph.rs  graph_builder.rs  spring.rs
clam_ffi/src/handle/: entry_point.rs  handle.rs  handle_generic.rs  handle_generic_2.rs  mod.rs
clam_ffi/src/physics/: entry.rs  force_directed_graph.rs  graph_builder.rs  helpers.rs  mod.rs  physics_node.rs  spring.rs
clam_ffi/src/tests/: test.rs
clam_ffi/src/tree_layout/: entry_point.rs  mod.rs  reingold_impl.rs  reingold_tilford.rs
clam_ffi/src/utils/: distances.rs  error.rs  helpers.rs  mod.rs  types.rs
cs_bindgen/: Cargo.toml
cs_bindgen/src/: main.rs
ffi/: Cargo.toml
ffi/src/: lib.rs
ffi/src/ffi_impl/: handle.rs
ffi/src/utils/: anomaly_readers.rs  debug.rs
hello_world/: Cargo.toml
hello_world/tests/: bindings.rs
unity/Assets/Plugins/: Lib.clam_ffi.cs
