[package]
name = "bind_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cbindgen = "0.24.5"
interoptopus = "0.14.18"
interoptopus_backend_c = "0.14.18"
interoptopus_backend_csharp = "0.14.18"

clam_ffi = { path = "../clam_ffi/" }
clam = { path = "../clam/" }
csbindgen = "1.7.3"
